--- a/package.json
+++ b/package.json
@@ -14,9 +14,17 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "gltf-loader": "^1.0.0",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-three-fiber": "^6.0.13",
+    "tailwindcss": "^3.2.7",
+    "three": "^0.150.1",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/three": "^0.149.0"
   }
 }
